--- a/index.html
+++ b/index.html
@@ -60,11 +60,43 @@
                 <img src="./resources/img-bedford-bizarre.webp" alt="Bedford Bizarre Tea">
                 <h4>Bedford Bizarre Tea</h4>
             </section>
-
         </section>
     </section>
 
+    <section class="locations">
+            <h2 class="l-head">Locations</h2>
 
-    
+        <section class="l-summary">
+            <section class="l-details">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+            </section>
+
+            <section class="l-details">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+            </section>
+
+            <section class="l-details">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+            </section>
+        </section>
+    </section>
+
+    <section class="footer">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+    </section>
+
+    <h5 class="copyright">copyright The Tea Cozy 2017</h5>
+
   </body>
 </html>
